@@ -1,16 +1,16 @@
-usr/lib/libmca_common_sm.so.0.0.0
-usr/lib/libmca_common_sm.so.0
-usr/lib/libmpi.so.0.0.0
-usr/lib/libmpi.so.0
-usr/lib/libmpi_cxx.so.0.0.0
-usr/lib/libmpi_cxx.so.0
-usr/lib/libmpi_f77.so.0.0.0
-usr/lib/libmpi_f77.so.0
-usr/lib/libmpi_f90.so.0.0.0
-usr/lib/libmpi_f90.so.0
-usr/lib/libopen-pal.so.0.0.0
-usr/lib/libopen-pal.so.0
-usr/lib/libopen-rte.so.0.0.0
-usr/lib/libopen-rte.so.0
-usr/lib/openmpi/*.so
-usr/lib/mpi.mod
+usr/lib/openmpi/lib/libmca_common_sm.so.0.0.0
+usr/lib/openmpi/lib/libmca_common_sm.so.0
+usr/lib/openmpi/lib/libmpi.so.0.0.0
+usr/lib/openmpi/lib/libmpi.so.0
+usr/lib/openmpi/lib/libmpi_cxx.so.0.0.0
+usr/lib/openmpi/lib/libmpi_cxx.so.0
+usr/lib/openmpi/lib/libmpi_f77.so.0.0.0
+usr/lib/openmpi/lib/libmpi_f77.so.0
+usr/lib/openmpi/lib/libmpi_f90.so.0.0.0
+usr/lib/openmpi/lib/libmpi_f90.so.0
+usr/lib/openmpi/lib/libopen-pal.so.0.0.0
+usr/lib/openmpi/lib/libopen-pal.so.0
+usr/lib/openmpi/lib/libopen-rte.so.0.0.0
+usr/lib/openmpi/lib/libopen-rte.so.0
+usr/lib/openmpi/lib/openmpi/*.so
+usr/lib/openmpi/lib/mpi.mod
