@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpatch/dpatch.make
+
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -33,6 +35,8 @@ configure-stamp:
 			--mandir=\$${prefix}/share/man 		\
 			--infodir=\$${prefix}/share/info 	\
 			--sysconfdir=/etc/openmpi 		\
+			--libdir=\$${prefix}/lib/openmpi/lib	\
+			--includedir=\$${prefix}/lib/openmpi/include	\
 			--with-devel-headers
 # Thread support disabled because it's broken, see bug #435581
 #			--enable-mpi-threads 			\
@@ -87,7 +91,7 @@ install-arch:
 	for f in ompi_info opal_wrapper orted; do \
 		cp debian/$${f}.1 debian/openmpi/usr/share/man/man1/$${f}.1 ; \
 	done
-	chmod 644 debian/openmpi/usr/lib/mpi.mod
+	chmod 644 debian/openmpi/usr/lib/openmpi/lib/mpi.mod
 	sed -i 's/3OpenMPI/3/' debian/openmpi/usr/share/man/man3/*.3
 	dh_install -s --sourcedir=$(CURDIR)/debian/openmpi --list-missing
 	install -m0644 debian/libopenmpi1.lintian-overrides $(CURDIR)/debian/libopenmpi1/usr/share/lintian/overrides/libopenmpi1
@@ -123,19 +127,10 @@ binary-arch: build-arch install-arch
 	dh_fixperms -a
 	dh_makeshlibs -a
 	dh_installdeb -a
-	dh_shlibdeps -a -l$(CURDIR)/debian/openmpi/lib -Llibopenmpi1
+	dh_shlibdeps -a -l$(CURDIR)/debian/openmpi/usr/lib/openmpi/lib -Llibopenmpi1
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
-
-patch: patch-stamp
-patch-stamp:
-	dpatch apply-all
-	touch patch-stamp
-
-unpatch:
-	dpatch deapply-all
-	rm -rf patch-stamp debian/patched
 
 binary: binary-arch binary-indep
 .PHONY: build clean binary-indep binary-arch binary install install-indep install-arch patch configure 
